--- a/integration-templates/asana/nango.yaml
+++ b/integration-templates/asana/nango.yaml
@@ -145,6 +145,7 @@ models:
         workspace: string | undefined
     AsanaWorkspace:
         __extends: BaseAsanaModel
+        id: string
         is_organization: boolean
     AsanaProject:
         __extends: BaseAsanaModel
