--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -174,6 +174,7 @@ integrations:
                 gid: string
                 resource_type: string
                 name: string
+                id: string
                 is_organization: boolean
             AsanaProject:
                 gid: string
