--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,6 +40,7 @@
         "ejs": "^3.1.10",
         "figlet": "^1.6.0",
         "glob": "^10.3.10",
+        "import-meta-resolve": "^4.1.0",
         "js-yaml": "^4.1.0",
         "memfs": "^3.5.1",
         "npm-package-arg": "^10.1.0",
@@ -74,7 +75,7 @@
         "webpack-node-externals": "^3.0.0"
     },
     "engines": {
-        "node": ">=18.19.0"
+        "node": ">=18.0"
     },
     "files": [
         "dist/**/*",
