--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -69,7 +69,7 @@
         "babel-loader": "^9.1.2",
         "esbuild": "^0.17.19",
         "strip-ansi": "7.1.0",
-        "vitest": "^0.33.0",
+        "vitest": "1.6.0",
         "webpack": "^5.85.1",
         "webpack-cli": "^5.1.3",
         "webpack-node-externals": "^3.0.0"
