--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -12,7 +12,8 @@
         "directory": "packages/utils"
     },
     "devDependencies": {
-        "axios": "^1.3.4"
+        "axios": "^1.3.4",
+        "type-fest": "4.14.0"
     },
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "files": [
