--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,6 +46,7 @@
         "npm-package-arg": "^10.1.0",
         "promptly": "^3.2.0",
         "semver": "^7.5.2",
+        "ts-json-schema-generator": "^2.3.0",
         "ts-node": "^10.9.1",
         "tsup": "^8.1.0",
         "typescript": "^5.3.3",
