fix(deps): upgrade vitest (#2357)
## Describe your changes

Fixes https://linear.app/nango/issue/NAN-1240/deps-upgrade-vitest

- Upgrade vitest major before they launch v2
It was easier than expected. I wish we could reup parallelism on
integration tests but we currently assume they run sequentially. It's
mostly around persist and records where we drop the schema entirely or
truncate the table. Ideally we won't do that, or if needed we use a
unique `schema_name` to avoid dropping concurrent tests.

--- a/packages/node-client/package.json
+++ b/packages/node-client/package.json
@@ -38,6 +38,6 @@
     "devDependencies": {
         "@nangohq/types": "^0.40.3",
         "tsup": "^8.0.2",
-        "vitest": "^0.33.0"
+        "vitest": "1.6.0"
     }
 }
