fix(nango-yaml): __string union

--- a/packages/cli/fixtures/nango-yaml/v2/advanced-syntax/nango.yaml
+++ b/packages/cli/fixtures/nango-yaml/v2/advanced-syntax/nango.yaml
@@ -39,3 +39,13 @@ models:
 
     Record:
         __string: any
+
+    RecordUnion:
+        __string: any | string | boolean
+    RecordArrayUnion:
+        __string:
+            - any
+            - string
+    RecordObject:
+        __string:
+            str: string
