feat(integration-templates): add fields to asana update-task

--- a/integration-templates/asana/nango.yaml
+++ b/integration-templates/asana/nango.yaml
@@ -143,6 +143,8 @@ models:
         parent: string | undefined
         tags: string[] | undefined
         workspace: string | undefined
+        title: string | undefined
+        description: string | undefined
     AsanaWorkspace:
         __extends: BaseAsanaModel
         id: string
