--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -170,6 +170,8 @@ integrations:
                 parent: string | undefined
                 tags: string[] | undefined
                 workspace: string | undefined
+                title: string | undefined
+                description: string | undefined
             AsanaWorkspace:
                 gid: string
                 resource_type: string
