[nan-1188] add pagination

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -408,6 +408,11 @@ calendly:
         response_type: code
     proxy:
         base_url: https://api.calendly.com
+        paginate:
+            type: link
+            link_path_in_response_body: pagination.next_page
+    token_response_metadata:
+        - owner
     docs: https://docs.nango.dev/integrations/all/calendly
 checkr-partner:
     categories:
