--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -61,6 +61,25 @@ airtable:
     proxy:
         base_url: https://api.airtable.com
     docs: https://docs.nango.dev/integrations/all/airtable
+autodesk:
+    categories:
+        - design
+    auth_mode: OAUTH2
+    authorization_url: https://developer.api.autodesk.com/authentication/v2/authorize
+    token_url: https://developer.api.autodesk.com/authentication/v2/token
+    scope_separator: ' '
+    disable_pkce: true
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://developer.api.autodesk.com
+        retry:
+            after: 'Retry-After'
+    docs: https://docs.nango.dev/integrations/all/autodesk
 blandai:
     categories:
         - support
