--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -67,7 +67,7 @@ integrations:
                 description: Update a task and be able to assign the task to a specific user
                 input: AsanaUpdateTask
                 endpoint: PATCH /ticketing/task
-                output: AsanaTask
+                output: Task
             delete-task:
                 input: Id
                 endpoint: DELETE /ticketing/task
@@ -170,8 +170,7 @@ integrations:
                 parent: string | undefined
                 tags: string[] | undefined
                 workspace: string | undefined
-                title: string | undefined
-                description: string | undefined
+                name: string | undefined
             AsanaWorkspace:
                 gid: string
                 resource_type: string
