feat(google-mail): support adding headers to send-email action (#2391)
## Describe your changes
- Modified the `nango.yaml` file and changed the GmailEmailInput Model
to support headers.
- Modified the `send-email` action to include headers into the email
before sending it.
- 
## Issue ticket number and link
[NAN-1165 Headers not supported when sending an email using google-mail
integration](https://linear.app/nango/issue/NAN-1165/headers-not-supported-when-sending-an-email-using-google-mail)
Issue Number: #2291

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/integration-templates/google-mail/nango.yaml
+++ b/integration-templates/google-mail/nango.yaml
@@ -29,8 +29,13 @@ models:
     GmailEmailInput:
         from: string
         to: string
+        headers: object | undefined
         subject: string
         body: string
+
+    EmailHeader:
+        headerName: string
+        headerValue: string
 
     GmailEmailSentOutput:
         id: string
