--- a/integration-templates/unanet/nango.yaml
+++ b/integration-templates/unanet/nango.yaml
@@ -5,9 +5,11 @@ integrations:
                 endpoint: POST /lead
                 description: Create a lead with information about the opportunity and company
                 input: Lead
+                output: Lead
             update-lead:
                 endpoint: PUT /lead
                 description: Update a lead
+                output: Lead
             get-schema:
                 endpoint: GET /schema
                 input: Entity
@@ -26,6 +28,7 @@ integrations:
             create-opportunity:
                 endpoint: POST /opportunity
                 input: Opportunity
+                output: Opportunity
                 description: Create an opportunity in the system
             list-stages:
                 endpoint: GET /stages
