--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -64,6 +64,7 @@
         "@types/ejs": "^3.1.2",
         "@types/figlet": "^1.5.6",
         "@types/glob": "^8.1.0",
+        "@types/json-schema": "7.0.15",
         "@types/node": "^20.1.4",
         "@types/npm-package-arg": "^6.1.1",
         "@types/promptly": "^3.0.2",
