--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -12,7 +12,9 @@
         "directory": "packages/utils"
     },
     "devDependencies": {
+        "@types/json-schema": "7.0.15",
         "axios": "^1.3.4",
+        "json-schema": "0.4.0",
         "type-fest": "4.14.0"
     },
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
