--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1498,6 +1498,21 @@ marketo:
     token_params:
         grant_type: client_credentials
     docs: https://docs.nango.dev/integrations/all/marketo
+medallia:
+    categories:
+        - crm
+        - support
+        - surveys
+    auth_mode: OAUTH2_CC
+    token_url: https://${connectionConfig.REPORTING_INSTANCE}/oauth/${connectionConfig.TENANT_NAME}/token
+    token_request_auth_method: basic
+    token_params:
+        grant_type: client_credentials
+    proxy:
+        retry:
+            after: 'X-RateLimit-Reset'
+        base_url: https://${connectionConfig.GATEWAY_URL}.apis.medallia.com
+    docs: https://docs.nango.dev/integrations/all/medallia
 microsoft:
     auth_mode: OAUTH2
     authorization_url: https://login.microsoftonline.com/common/oauth2/v2.0/authorize
