--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1633,8 +1633,9 @@ netsuite:
 netsuite-tba:
     alias: netsuite
     auth_mode: TBA
-    authorization_url: https://${connectionConfig.accountId}.restlets.api.netsuite.com/request/requesttoken
-    token_url: https://${connectionConfig.accountId}.suitetalk.api.netsuite.com/services/rest/auth/oauth2/v1/token
+    authorization_url: https://${connectionConfig.accountId}.app.netsuite.com/app/login/secure/authorizetoken.nl
+    token_url: https://${connectionConfig.accountId}.restlets.api.netsuite.com/request/requesttoken
+    access_token_url: https://${connectionConfig.accountId}.restlets.api.netsuite.com/rest/accesstoken
     docs: https://docs.nango.dev/integrations/all/netsuite
 next-cloud-ocs:
     auth_mode: BASIC
