--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1504,14 +1504,14 @@ medallia:
         - support
         - surveys
     auth_mode: OAUTH2_CC
-    token_url: https://${connectionConfig.REPORTING_INSTANCE}/oauth/${connectionConfig.TENANT_NAME}/token
+    token_url: https://${connectionConfig.reportingInstance}/oauth/${connectionConfig.tenantName}/token
     token_request_auth_method: basic
     token_params:
         grant_type: client_credentials
     proxy:
         retry:
             after: 'X-RateLimit-Reset'
-        base_url: https://${connectionConfig.GATEWAY_URL}.apis.medallia.com
+        base_url: https://${connectionConfig.gatewayUrl}.apis.medallia.com
     docs: https://docs.nango.dev/integrations/all/medallia
 microsoft:
     auth_mode: OAUTH2
