Adding the Oura integration as an API provider

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1713,6 +1713,22 @@ osu:
     proxy:
         base_url: https://osu.ppy.sh
     docs: https://docs.nango.dev/integrations/all/osu
+oura:
+    categories:
+        - sports
+    auth_mode: OAUTH2
+    authorization_url: https://cloud.ouraring.com/oauth/authorize
+    token_url: https://api.ouraring.com/oauth/token
+    scope_separator: ' '
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://cloud.ouraring.com
+    docs: https://cloud.ouraring.com/v2/docs
 outlook:
     categories:
         - communication
