[nan-1193] fix oauth2_cc

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -426,7 +426,7 @@ certn:
 certn-partner:
     categories:
         - legal
-    auth_mode: OAUTH_CC
+    auth_mode: OAUTH2_CC
     proxy:
         headers:
             Authorization: Bearer ${apiKey}
