--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,6 +18,7 @@
         "@colors/colors": "1.6.0",
         "axios": "^1.3.4",
         "dd-trace": "5.2.0",
+        "exponential-backoff": "3.1.1",
         "http-proxy-agent": "7.0.2",
         "https-proxy-agent": "7.0.4",
         "nanoid": "5.0.7",
