--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -19,8 +19,7 @@
         "@nangohq/utils": "file:../utils",
         "axios": "^1.3.4",
         "dayjs": "^1.11.7",
-        "dayjs-plugin-utc": "^0.1.2",
-        "exponential-backoff": "^3.1.1"
+        "dayjs-plugin-utc": "^0.1.2"
     },
     "devDependencies": {
         "@nangohq/types": "file:../types",
