--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -42,6 +42,7 @@
         "jsonwebtoken": "^9.0.2",
         "lodash-es": "^4.17.21",
         "ms": "3.0.0-canary.1",
+        "oauth-1.0a": "^2.2.6",
         "parse-link-header": "^2.0.0",
         "posthog-node": "^3.1.3",
         "qs": "^6.11.2",
