--- a/integration-templates/checkr-partner/nango.yaml
+++ b/integration-templates/checkr-partner/nango.yaml
@@ -33,6 +33,7 @@ models:
     UtilityAnyType:
         __string: any
     Location:
+        city?: string
         country: string
         state?: string
     Candidate:
@@ -59,8 +60,10 @@ models:
         adjudication: string
         metadata: UtilityAnyType
     CreateCandidate:
+        __extends: Location
         first_name: string
         middle_name?: string
+        no_middle_name?: boolean
         last_name: string
         email: string
         phone: string
