--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -26,6 +26,7 @@
         "@nangohq/node": "^0.40.7",
         "@nangohq/utils": "file:../utils",
         "@sentry/node": "^7.106.0",
+        "ajv": "^8.12.0",
         "archiver": "^6.0.1",
         "axios": "^1.3.4",
         "braintree": "^3.15.0",
