[nan-1298] unanet updates

--- a/integration-templates/unanet/nango.yaml
+++ b/integration-templates/unanet/nango.yaml
@@ -10,6 +10,10 @@ integrations:
                 endpoint: PUT /lead
                 description: Update a lead
                 output: Lead
+            get-leads:
+                endpoint: GET /leads
+                description: Fetch all leads
+                output: Lead[]
             get-schema:
                 endpoint: GET /schema
                 input: Entity
@@ -22,7 +26,7 @@ integrations:
                 description: Retrieve information about a company
             create-company:
                 endpoint: POST /company
-                input: Entity
+                input: Company
                 output: Company
                 description: Create a company in the system
             create-opportunity:
@@ -30,6 +34,11 @@ integrations:
                 input: Opportunity
                 output: Opportunity
                 description: Create an opportunity in the system
+            create-contact:
+                endpoint: POST /contact
+                input: Contact
+                output: Contact
+                description: Create a contact in the system
             list-stages:
                 endpoint: GET /stages
                 description: List all the stages that exist in the system
@@ -42,8 +51,10 @@ models:
     Entity:
         name: string
     Location:
-        city: string
-        country: string
+        city?: string
+        state?: string
+        country?: string
+        zip?: string
     Stage:
         id: number
         name: string
@@ -51,30 +62,61 @@ models:
     Company:
         name: string
         externalId: string
+        federalAgency?: FederalAgency
         shortName: string
         description: string
         id?: string
     Opportunity:
+        __extends: Location
         name: string
         description: string
         id?: string
         externalId: string
-        companyName: string
+        dueDate: string
+        federalAgency: FederalAgency
         stage: string
         active: boolean
     Activity:
         createdAt: string
         id: string
         message: string
+    FederalAgency:
+        __extends: Location
+        companyId?: number
+        name: string
+        externalId?: string
+        acronym?: string
+        address1?: string
+        address2?: string
+        address3?: string
+        isHeadquarters?: boolean
+        parentCompanyId?: number
+        parentCompanyName?: string
+        childCount?: number
+        addrLat?: number
+        addrLong?: number
+    Contact:
+        id?: string
+        firstName: string
+        lastName: string
+        federalAgency: FederalAgency
+        position: string
+        emailAddress: string
+        phone: string
+        fax: string
     Lead:
         __extends: Timestamps
-        id: string
-        description: string
-        comments?: Comment[]
-        activities?: Activity[]
-        opportunity?: Opportunity
+        id?: string
+        federalAgency: FederalAgency
         name: string
-        stage?: Stage
+        dueDate: string
+        postedDate: string
+        solicitationNumber: string
+        naicsCategory: string | string[]
+        city: string
+        state: string
+        country: string
+        description: string
     Schema:
         PropertyName: string
         Group: string | null
