fix: pinning CLI dependencies
Customers might pin the CLI version but nango dependencies are not
pinned which leads to issue if those packages are updated, creating a
mismatch between CLI version and dependencies version.
Until we come up with a real versioning strategy, pinning the nango
dependencies to avoid any version mismatch

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,8 +22,8 @@
         "@datadog/datadog-api-client": "^1.16.0",
         "@hapi/boom": "^10.0.1",
         "@nangohq/database": "file:../database",
-        "@nangohq/nango-yaml": "^0.40.1",
-        "@nangohq/node": "^0.40.8",
+        "@nangohq/nango-yaml": "0.40.8",
+        "@nangohq/node": "0.40.8",
         "@nangohq/utils": "file:../utils",
         "@sentry/node": "^7.106.0",
         "ajv": "^8.12.0",
