--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,8 +24,8 @@
         "@babel/parser": "^7.22.5",
         "@babel/traverse": "^7.22.5",
         "@babel/types": "^7.22.5",
-        "@nangohq/nango-yaml": "^0.40.8",
-        "@nangohq/shared": "^0.40.8",
+        "@nangohq/nango-yaml": "0.40.8",
+        "@nangohq/shared": "0.40.8",
         "@swc/core": "^1.5.25",
         "ajv": "^8.12.0",
         "ajv-errors": "^3.0.0",
@@ -57,7 +57,7 @@
         "@babel/core": "^7.22.1",
         "@babel/preset-env": "^7.22.4",
         "@babel/preset-typescript": "^7.21.5",
-        "@nangohq/types": "^0.40.8",
+        "@nangohq/types": "0.40.8",
         "@types/babel__traverse": "^7.20.1",
         "@types/babel-traverse": "^6.25.7",
         "@types/commander": "^2.12.2",
