--- a/packages/nango-yaml/package.json
+++ b/packages/nango-yaml/package.json
@@ -17,7 +17,7 @@
         "ms": "3.0.0-canary.1"
     },
     "devDependencies": {
-        "@nangohq/types": "^0.40.8",
+        "@nangohq/types": "0.40.8",
         "vitest": "1.6.0"
     },
     "files": [
