--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -546,7 +546,6 @@ coros:
     authorization_url: https://open.coros.com/oauth2/authorize
     token_url: https://open.coros.com/oauth2/accesstoken
     refresh_url: https://open.coros.com/oauth2/refresh-token
-    # scope_separator: ' '
     authorization_params:
         response_type: code
     token_response_metadata:
@@ -557,6 +556,22 @@ coros:
         grant_type: refresh_token
     proxy:
         base_url: https://open.coros.com
+coros-sandbox:
+    auth_mode: OAUTH2
+    authorization_url: https://opentest.coros.com/oauth2/authorize
+    token_url: https://opentest.coros.com/oauth2/accesstoken
+    refresh_url: https://opentest.coros.com/oauth2/refresh-token
+    # scope_separator: ' '
+    authorization_params:
+        response_type: code
+    token_response_metadata:
+        - openId
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://opentest.coros.com
 #Untested configuration. Please reach out if you have a test account that we can use to test it.
 datev:
     categories:
